testsuite/tests/rewriting_errors/no_auto_fix/test.out
main.adb:3:4: rule violation: Custom rule violation
3 |    goto lbl;  --  FLAG
  |    ^^^^^^^^^

error: Rule "custom" is not defining any auto-fixing function
checker.lkql:4:22 in <anonymous>
  4 | map(roots, (root) => node_checker(root))
    |                      ^^^^^^^^^^^^^^^^^^

checker.lkql:4:1 in checker.lkql
  4 | map(roots, (root) => node_checker(root))
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
